--- a/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
+++ b/8.Geohydrological Applications/3.PCRasters/GroundwaterInterpolation/MyGroundWaterLevel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "killing-enlargement",
+   "id": "native-attack",
    "metadata": {},
    "source": [
     "#  Create a groundwater level map from borehole data and a DEM \n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "early-verse",
+   "id": "municipal-donor",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-singer",
+   "id": "reported-roman",
    "metadata": {},
    "source": [
     "## 2. Convert a CSV file to PCRaster map format\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "progressive-walter",
+   "id": "genuine-separation",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-preserve",
+   "id": "retired-polyester",
    "metadata": {},
    "source": [
     "Read the `boreholedepth.map` file into the variable `BoreholeDepth`."
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adequate-adaptation",
+   "id": "weekly-scholar",
    "metadata": {},
    "source": [
     "### Visualise `BoreholeDepth` with Aguila. \n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "federal-meaning",
+   "id": "clinical-filing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "tropical-ireland",
+   "id": "organized-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-expert",
+   "id": "lesbian-tablet",
    "metadata": {},
    "source": [
     "## 3. Interpolate borehole depth with IDW\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dental-keyboard",
+   "id": "velvet-mother",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlling-compilation",
+   "id": "dangerous-japanese",
    "metadata": {},
    "source": [
     "Now we interpolate the borehole depths with IDW using the following line:"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "technological-pleasure",
+   "id": "frequent-patch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minute-nickel",
+   "id": "excited-radius",
    "metadata": {},
    "source": [
     "Let's visualise the result with Aguila."
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "collected-recognition",
+   "id": "stretch-upgrade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +183,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "conceptual-status",
+   "metadata": {},
+   "source": [
+    "## 4. Interpolate borehole depth with Thiessen polygons\n",
+    "<hr> \n",
+    "\n",
+    "Another interpolation method is using so called Thiessen polygons.\n",
+    "\n",
+    "In PCRaster this involves three steps:\n",
+    "\n",
+    "1. Assign a unique ID to each borehole\n",
+    "2. Assign to each pixel the closest borehole ID\n",
+    "3. Assign the borehole depth to the corresponding borehole IDs for all cells\n",
+    "\n",
+    "Let's first assign a unique ID to each borehole using the <code>uniqueid</code> operation. The input needs to be a boolean raster.\n",
+    "\n",
+    "To create a boolean raster of the boreholes we use the <code>defined</code> operation. This will give boolean True for all cells with a value and boolean False for all nodata cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "supported-fiber",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Boreholes = defined(BoreholeDepth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "corrected-subscriber",
+   "metadata": {},
+   "source": [
+    "Check the result with Aguila."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "serious-mongolia",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aguila(Boreholes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "differential-texture",
+   "metadata": {},
+   "source": [
+    "Now we assign a unique ID to each boolean True cell. \n",
+    "- Note that we want the output to be nominal instead of scalar. \n",
+    "- Therefore we wrap the <code>uniqueid</code> into the <code>nominal</code> operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "obvious-meter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BoreholeID = nominal(uniqueid(Boreholes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "willing-thriller",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aguila(BoreholeID)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "spread-namibia",
+   "metadata": {},
+   "source": [
+    "Let's assign to each cell its closes borehole ID. We use the <code>spreadzone</code> operation, which has the following syntax:\n",
+    "\n",
+    "<code>Result = spreadzone(points, initialfrictiondist, friction)</code>\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "* <code>points</code> is the raster with points to interpolate. In our case BoreholeID.\n",
+    "* <code>initialfrictiondist</code> is the initial friction distance. We don't need that, so we make it 0.\n",
+    "* <code>friction</code> is the friction for each cell, which we keep constant at 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "expected-objective",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ThiessenID = spreadzone(BoreholeID,0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "electrical-import",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aguila(ThiessenID)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-certification",
+   "id": "deadly-march",
    "metadata": {},
    "outputs": [],
    "source": []
